# drawsvg-stubs

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
drawsvg-stubs/: __init__.pyi  color.pyi  defs.pyi  drawing.pyi  elements.pyi  font_embed.pyi  frame_animation.pyi  jupyter.pyi  raster.pyi  types.pyi  url_encode.pyi  video.pyi
drawsvg-stubs/native_animation/: __init__.pyi  playback_control_js.pyi  playback_control_ui.pyi  synced_animation.pyi
drawsvg-stubs/widgets/: __init__.pyi  async_animation.pyi  drawing_javascript.pyi  drawing_widget.pyi
