[tool.poetry]
name = "drawsvg-stubs"
version = "0.0.1"
license = "WFTPL"
description = "Type stubs for drawsvg"
authors = ["Tomáš Zikmund <tommekster@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tommekster/drawsvg-stubs"
packages = [{ include = "drawsvg-stubs" }]
classifiers = ["Typing :: Stubs Only"]

[tool.poetry.dependencies]
python = "^3.10"
drawsvg = "^2.1.1"

[tool.poetry.dev-dependencies]
black = { version = "^22.3.0", python = "^3.9" }
isort = { version = "^5.10.1", python = "^3.9" }
mypy = { version = "^0.950", python = "^3.9" }

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[tool.isort]
profile = "black"
known_first_party = "drawsvg"
combine_as_imports = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
